[package]
name = 'pallet-example-erc721'
version = '0.0.1'
authors = ['david@chainsafe.io']
edition = '2018'

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.102", optional = true }

# primitives
sp-io = { git = "https://github.com/centrifuge/substrate", default-features = false, branch = "master" }
sp-core = { git = "https://github.com/centrifuge/substrate.git", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/centrifuge/substrate.git", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/centrifuge/substrate", default-features = false, branch = "master" }

# frame dependencies
frame-support = { git = "https://github.com/centrifuge/substrate.git", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/centrifuge/substrate.git", default-features = false, branch = "master" }

# local dependencies
chainbridge = { path = "../chainbridge" , default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/centrifuge/substrate.git", default-features = false, branch = "master" }

[build-dependencies]
wasm-builder-runner = { version = "3.0.0", package = "substrate-wasm-builder-runner"}

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"chainbridge/std"
]
